unpackaged/main/default/objects/NACHA_FileLog__c/NACHA_FileLog__c.object-meta.xml
<CustomObject>
    <label>NACHA FileLog</label>
    <nameField>
        <displayFormat>NACHA-{000000}</displayFormat>
        <label>NACHA FileLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NACHA FileLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>