unpackaged/main/default/objects/NACHA_FileLog__c/fields/File_Generated__c.field-meta.xml
<CustomField>
    <fullName>File_Generated__c</fullName>
    <description>Date/Time the NACHA file was generated</description>
    <label>File Generated</label>
    <type>DateTime</type>
</CustomField>