unpackaged/main/default/objects/NACHA_FileLog__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>The Target date for the session of the NACHA generation system that generated the NACHA file</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>