unpackaged/main/default/objects/NACHA_FileLog__c/fields/Total_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Total_Transactions__c</fullName>
    <description>Total number of transactions included in the NACHA file.</description>
    <label>Total Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>